adding seed and resolving complexity in game engine set Alpha